--- a/mbot/index.html
+++ b/mbot/index.html
@@ -5,24 +5,33 @@
     <title>Muricans - mbot</title>
     <meta charset="utf-8">
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body id="body">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+    </script>
 
     <nav id="navigation" class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark">
         <a class="navbar-brand test" href="#">Muricans</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav test">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Profiles
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -72,6 +81,11 @@
                             <td>serverinfo</td>
                             <td colspan="4">use</td>
                         </tr>
+                        <tr>
+                            <td>commands</td>
+                            <td>everyone</td>
+                            <td colspan="3">use</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
@@ -100,7 +114,11 @@
                         </tr>
                         <tr>
                             <td>channel</td>
-                            <td>The channel that module uses</td>
+                            <td>the channel that module uses</td>
+                        </tr>
+                        <tr>
+                            <td>everyone</td>
+                            <td>whether you want to allow everyone to use that module or not &lt;true|false></td>
                         </tr>
                     </tbody>
                 </table>
@@ -152,9 +170,44 @@
                             <td>clean</td>
                             <td>manage messages, administrator</td>
                         </tr>
+                        <tr>
+                            <td>create</td>
+                            <td>?administrator</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
+            <hr id="hr">
+            <h2 class="header">custom command modules</h2>
+            <div class="article-text">
+                <p>When making a custom command, you can start the command message with '{module}' to turn it into a
+                    module command.</p>
+                <table class="table table-bordered table-hover">
+                    <thead>
+                        <tr>
+                            <th scope="col">Name</th>
+                            <th scope="col">Returns</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>{mention}</td>
+                            <td>The user mentioned in the message. If no mention is provided it defaults to the user who
+                                sent the message.</td>
+                        </tr>
+                        <tr>
+                            <td>{id}</td>
+                            <td>The id of the mentioned user. If there is no mention, it defaults to the user who sent
+                                the message.</td>
+                        </tr>
+                        <tr>
+                            <td>{time}</td>
+                            <td>The current time that the bot is hosted in.</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <hr id="hr">
         </div>
     </div>
 </body>
