module updates and things

--- a/mbot/index.html
+++ b/mbot/index.html
@@ -86,6 +86,11 @@
                             <td>everyone</td>
                             <td colspan="3">use</td>
                         </tr>
+                        <tr>
+                            <td>roles</td>
+                            <td>default</td>
+                            <td colspan="3">use</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
@@ -120,6 +125,10 @@
                             <td>everyone</td>
                             <td>whether you want to allow everyone to use that module or not &lt;true|false></td>
                         </tr>
+                        <tr>
+                            <td>default</td>
+                            <td>default value for that module</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
@@ -140,7 +149,7 @@
                         </tr>
                         <tr>
                             <td>mute</td>
-                            <td>kick members</td>
+                            <td>kick members, administrator (user MUST have a higher role than target user)</td>
                         </tr>
                         <tr>
                             <td>unmute</td>
