--- a/mbot/index.html
+++ b/mbot/index.html
@@ -64,14 +64,14 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>welcomemessage</td>
+                            <td>welcomemessage (not active)</td>
                             <td>message</td>
                             <td>edit</td>
                             <td>use</td>
                             <td>channel</td>
                         </tr>
                         <tr>
-                            <td>leavemessage</td>
+                            <td>leavemessage (not active)</td>
                             <td>message</td>
                             <td>edit</td>
                             <td>use</td>
