--- a/mbot/index.html
+++ b/mbot/index.html
@@ -4,39 +4,44 @@
 <head>
     <title>Muricans - mbot</title>
     <meta charset="utf-8">
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet"
+        href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css"
+        integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body id="body">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
+    <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js"
+        integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous">
     </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+    <script src="https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js"
+        integrity="sha384-CauSuKpEqAFajSpkdjv3z9t8E7RlpJ1UP0lKM/+NdtSarroVKu069AlsRPKkFBz9" crossorigin="anonymous">
+    </script>
+    <script>
+        $(document).ready(function () {
+            $('body').bootstrapMaterialDesign();
+        });
     </script>
 
-    <nav id="navigation" class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark">
-        <a class="navbar-brand test" href="#">Muricans</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <a class="navbar-brand" href="#">Muricans</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav test">
+            <ul class="navbar-nav">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
                         Profiles
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="https://www.twitch.tv/muricanslol">Twitch</a>
                         <a class="dropdown-item" href="https://github.com/muricans">GitHub</a>
+                        <a class="dropdown-item" href="https://www.twitch.tv/muricanslol">Twitch</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -46,13 +51,19 @@
         </div>
     </nav>
 
+    <div class="invite">
+        <a href="https://discordapp.com/oauth2/authorize?client_id=570454808494866447&permissions=268823670&scope=bot"><button
+                type="button" class="position-fixed btn btn-raised btn-info">Invite Me
+            </button></a>
+    </div>
+
     <div class="container">
         <h1 class="mbot">mbot</h1>
         <hr id="hr">
         <div class="article">
             <h2 class="header">modules</h2>
             <div class="article-text">
-                <table class="table table-bordered table-hover">
+                <table class="table table-bordered table-hover bg-light">
                     <thead>
                         <tr>
                             <th scope="col">Name</th>
@@ -97,7 +108,7 @@
             <hr id="hr">
             <h2 class="header">module options</h2>
             <div class="article-text">
-                <table class="table table-bordered table-hover">
+                <table class="table table-bordered table-hover bg-light">
                     <thead>
                         <tr>
                             <th scope="col">Name</th>
@@ -135,7 +146,7 @@
             <hr id="hr">
             <h2 class="header">command permissions</h2>
             <div class="article-text">
-                <table class="table table-bordered table-hover">
+                <table class="table table-bordered table-hover bg-light">
                     <thead>
                         <tr>
                             <th scope="col">Command</th>
@@ -191,7 +202,7 @@
             <div class="article-text">
                 <p>When making a custom command, you can start the command message with '{module}' to turn it into a
                     module command.</p>
-                <table class="table table-bordered table-hover">
+                <table class="table table-bordered table-hover bg-light">
                     <thead>
                         <tr>
                             <th scope="col">Name</th>
