--- a/mbot/index.html
+++ b/mbot/index.html
@@ -53,7 +53,7 @@
 
     <div class="invite">
         <a href="https://discordapp.com/oauth2/authorize?client_id=570454808494866447&permissions=268823670&scope=bot"><button
-                type="button" class="position-fixed btn btn-raised btn-info">Invite Me
+                type="button" class="position-relative btn btn-raised btn-info">Invite Me
             </button></a>
     </div>
 
