--- a/mbot/index.html
+++ b/mbot/index.html
@@ -95,7 +95,8 @@
                         <tr>
                             <td>commands</td>
                             <td>everyone</td>
-                            <td colspan="3">use</td>
+                            <td>use</td>
+                            <td colspan="2">edit</td>
                         </tr>
                         <tr>
                             <td>roles</td>
