--- a/mbot/index.html
+++ b/mbot/index.html
@@ -75,14 +75,14 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>welcomemessage (not active)</td>
+                            <td>welcomemessage</td>
                             <td>message</td>
                             <td>edit</td>
                             <td>use</td>
                             <td>channel</td>
                         </tr>
                         <tr>
-                            <td>leavemessage (not active)</td>
+                            <td>leavemessage</td>
                             <td>message</td>
                             <td>edit</td>
                             <td>use</td>
@@ -102,6 +102,10 @@
                             <td>roles</td>
                             <td>default</td>
                             <td colspan="3">use</td>
+                        </tr>
+                        <tr>
+                            <td>nsfw</td>
+                            <td colspan="4">use</td>
                         </tr>
                     </tbody>
                 </table>
@@ -161,7 +165,7 @@
                         </tr>
                         <tr>
                             <td>mute</td>
-                            <td>kick members, administrator (user MUST have a higher role than target user)</td>
+                            <td>kick members, ?administrator (user MUST have a higher role than target user)</td>
                         </tr>
                         <tr>
                             <td>unmute</td>
@@ -189,7 +193,7 @@
                         </tr>
                         <tr>
                             <td>clean</td>
-                            <td>manage messages, administrator</td>
+                            <td>manage messages, ?administrator</td>
                         </tr>
                         <tr>
                             <td>create</td>
@@ -197,7 +201,7 @@
                         </tr>
                         <tr>
                             <td>ban</td>
-                            <td>ban members, administrator, (user MUST have a higher role than target user)</td>
+                            <td>ban members, ?administrator, (user MUST have a higher role than target user)</td>
                         </tr>
                     </tbody>
                 </table>
