--- a/embedbuilder/index.html
+++ b/embedbuilder/index.html
@@ -113,9 +113,9 @@
 				<p>If showing page numbers, this is the format that will be used.</p>
 				<p>By default format is %p/%m which converts to current/max.</p>
 				<h2 id="events">Events</h2>
-				<p><a href="https://example.com/"><code>create</code></a></p>
+				<p><a href="https://muricans.github.io/embedbuilder/classes/embedbuilder.html#create"><code>create</code></a></p>
 				<p>Emitted from build() when the first page has finished building.</p>
-				<p><a href="https://example.com"><code>stop</code></a></p>
+				<p><a href="https://muricans.github.io/embedbuilder/classes/embedbuilder.html#delete"><code>stop</code></a></p>
 				<p>Emitted from build() when the timer has run out, or the collector is canceled in any way.</p>
 				<h2 id="example">Example</h2>
 				<p>First import discord-embedbuilder into your project.</p>
