--- a/embedbuilder/v11/interfaces/emojis.html
+++ b/embedbuilder/v11/interfaces/emojis.html
@@ -64,6 +64,10 @@
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
+			<section class="tsd-panel tsd-comment">
+				<div class="tsd-comment tsd-typography">
+				</div>
+			</section>
 			<section class="tsd-panel tsd-hierarchy">
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
@@ -79,7 +83,6 @@
 						<section class="tsd-index-section tsd-is-not-exported">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="emojis.html#do" class="tsd-kind-icon">do</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="emojis.html#emoji" class="tsd-kind-icon">emoji</a></li>
 							</ul>
 						</section>
@@ -89,12 +92,12 @@
 			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
-					<a name="do" class="tsd-anchor"></a>
-					<h3>do</h3>
-					<div class="tsd-signature tsd-kind-icon">do<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
+					<a name="emoji" class="tsd-anchor"></a>
+					<h3>emoji</h3>
+					<div class="tsd-signature tsd-kind-icon">emoji<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/13f235e/index.ts#L18">index.ts:18</a></li>
+							<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/1bb46e7/index.ts#L28">index.ts:28</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -125,16 +128,6 @@
 						</ul>
 					</div>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
-					<a name="emoji" class="tsd-anchor"></a>
-					<h3>emoji</h3>
-					<div class="tsd-signature tsd-kind-icon">emoji<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/13f235e/index.ts#L17">index.ts:17</a></li>
-						</ul>
-					</aside>
-				</section>
 			</section>
 		</div>
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
@@ -150,14 +143,14 @@
 					<li class=" tsd-kind-class">
 						<a href="../classes/embedbuilder.html" class="tsd-kind-icon">Embed<wbr>Builder</a>
 					</li>
+					<li class=" tsd-kind-interface tsd-is-private tsd-is-not-exported">
+						<a href="emoji.html" class="tsd-kind-icon">Emoji</a>
+					</li>
 				</ul>
 				<ul class="current">
-					<li class="current tsd-kind-interface tsd-is-not-exported">
+					<li class="current tsd-kind-interface tsd-is-private tsd-is-not-exported">
 						<a href="emojis.html" class="tsd-kind-icon">Emojis</a>
 						<ul>
-							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
-								<a href="emojis.html#do" class="tsd-kind-icon">do</a>
-							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
 								<a href="emojis.html#emoji" class="tsd-kind-icon">emoji</a>
 							</li>
