--- a/embedbuilder/v11/globals.html
+++ b/embedbuilder/v11/globals.html
@@ -71,10 +71,11 @@
 								<li class="tsd-kind-class"><a href="classes/embedbuilder.html" class="tsd-kind-icon">Embed<wbr>Builder</a></li>
 							</ul>
 						</section>
-						<section class="tsd-index-section tsd-is-not-exported">
+						<section class="tsd-index-section tsd-is-private tsd-is-private-protected tsd-is-not-exported">
 							<h3>Interfaces</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-interface tsd-is-not-exported"><a href="interfaces/emojis.html" class="tsd-kind-icon">Emojis</a></li>
+								<li class="tsd-kind-interface tsd-is-private tsd-is-not-exported"><a href="interfaces/emoji.html" class="tsd-kind-icon">Emoji</a></li>
+								<li class="tsd-kind-interface tsd-is-private tsd-is-not-exported"><a href="interfaces/emojis.html" class="tsd-kind-icon">Emojis</a></li>
 							</ul>
 						</section>
 					</div>
@@ -94,7 +95,10 @@
 					<li class=" tsd-kind-class">
 						<a href="classes/embedbuilder.html" class="tsd-kind-icon">Embed<wbr>Builder</a>
 					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
+					<li class=" tsd-kind-interface tsd-is-private tsd-is-not-exported">
+						<a href="interfaces/emoji.html" class="tsd-kind-icon">Emoji</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-private tsd-is-not-exported">
 						<a href="interfaces/emojis.html" class="tsd-kind-icon">Emojis</a>
 					</li>
 				</ul>
