--- a/embedbuilder/master/interfaces/emoji.html
+++ b/embedbuilder/master/interfaces/emoji.html
@@ -106,7 +106,7 @@
 						<ul class="tsd-parameters">
 							<li class="tsd-parameter-siganture">
 								<ul class="tsd-signatures tsd-kind-type-literal tsd-parent-kind-property tsd-is-not-exported">
-									<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span>sent<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Message</span>, page<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span>, emoji<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></li>
+									<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span>sent<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Message</span>, page<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span>, emoji<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 								</ul>
 								<ul class="tsd-descriptions">
 									<li class="tsd-description">
@@ -122,10 +122,7 @@
 												<h5>emoji: <span class="tsd-signature-type">string</span></h5>
 											</li>
 										</ul>
-										<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span>
-											<span class="tsd-signature-symbol"> | </span>
-											<span class="tsd-signature-type">undefined</span>
-										</h4>
+										<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
 									</li>
 								</ul>
 							</li>
