--- a/embedbuilder/master/classes/pageupdater.html
+++ b/embedbuilder/master/classes/pageupdater.html
@@ -66,6 +66,9 @@
 		<div class="col-8 col-content">
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
+					<div class="lead">
+						<p>PageUpdater class</p>
+					</div>
 				</div>
 			</section>
 			<section class="tsd-panel tsd-hierarchy">
@@ -120,7 +123,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/baa36e1/src/reaction/pageupdater.ts#L38">reaction/pageupdater.ts:38</a></li>
+									<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/6aa17d4/src/reaction/pageupdater.ts#L39">reaction/pageupdater.ts:39</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -184,7 +187,7 @@ pageUpdater.awaitPageUpdate()
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/baa36e1/src/reaction/pageupdater.ts#L125">reaction/pageupdater.ts:125</a></li>
+									<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/6aa17d4/src/reaction/pageupdater.ts#L134">reaction/pageupdater.ts:134</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -221,7 +224,7 @@ pageUpdater.awaitPageUpdate()
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/baa36e1/src/reaction/pageupdater.ts#L118">reaction/pageupdater.ts:118</a></li>
+									<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/6aa17d4/src/reaction/pageupdater.ts#L127">reaction/pageupdater.ts:127</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -258,7 +261,7 @@ pageUpdater.awaitPageUpdate()
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/baa36e1/src/reaction/pageupdater.ts#L111">reaction/pageupdater.ts:111</a></li>
+									<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/6aa17d4/src/reaction/pageupdater.ts#L120">reaction/pageupdater.ts:120</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -270,12 +273,21 @@ pageUpdater.awaitPageUpdate()
 							<ul class="tsd-parameters">
 								<li>
 									<h5>page: <span class="tsd-signature-type">number</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>The page number received.</p>
+									</div>
 								</li>
 								<li>
 									<h5>content: <span class="tsd-signature-type">string</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>The content that contained the page number.</p>
+									</div>
 								</li>
 								<li>
 									<h5>collector: <span class="tsd-signature-type">MessageCollector</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>The message collector.</p>
+									</div>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -295,9 +307,25 @@ pageUpdater.awaitPageUpdate()
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/baa36e1/src/reaction/pageupdater.ts#L60">reaction/pageupdater.ts:60</a></li>
+									<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/6aa17d4/src/reaction/pageupdater.ts#L67">reaction/pageupdater.ts:67</a></li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Awaits a page update.</p>
+								</div>
+								<dl class="tsd-comment-tags">
+									<dt>emits</dt>
+									<dd><p>page</p>
+									</dd>
+									<dt>emits</dt>
+									<dd><p>invalid</p>
+									</dd>
+									<dt>emits</dt>
+									<dd><p>cancel</p>
+									</dd>
+								</dl>
+							</div>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">this</span></h4>
 						</li>
 					</ul>
