--- a/mbot/index.html
+++ b/mbot/index.html
@@ -193,7 +193,7 @@
                         </tr>
                         <tr>
                             <td>clean</td>
-                            <td>manage messages, ?administrator</td>
+                            <td>manage messages, ?administrator, (bot MUST have administrator)</td>
                         </tr>
                         <tr>
                             <td>create</td>
@@ -208,6 +208,10 @@
                             <td>kick</td>
                             <td>kick members, ?administrator, (user and bot MUST have a higher role than target user)
                             </td>
+                        </tr>
+                        <tr>
+                            <td>database</td>
+                            <td>bot owner</td>
                         </tr>
                     </tbody>
                 </table>
