--- a/mbot/index.html
+++ b/mbot/index.html
@@ -213,6 +213,10 @@
                             <td>database</td>
                             <td>bot owner</td>
                         </tr>
+                        <tr>
+                            <td>eval</td>
+                            <td>bot owner</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
