--- a/mbot/index.html
+++ b/mbot/index.html
@@ -45,7 +45,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Documentation</a>
+                    <a class="nav-link" href="./docs/index.html">Documentation</a>
                 </li>
             </ul>
         </div>
