Remove v11 and master branch documentation for discord-embedbuilder
Also updated README for v3.0.0 of discord-embedbuilder

--- a/embedbuilder/interfaces/emoji.html
+++ b/embedbuilder/interfaces/emoji.html
@@ -98,7 +98,7 @@
 					<div class="tsd-signature tsd-kind-icon">do<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/1bb46e7/index.ts#L21">index.ts:21</a></li>
+							<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/484c01a/src/embedbuilder.ts#L23">embedbuilder.ts:23</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -135,7 +135,7 @@
 					<div class="tsd-signature tsd-kind-icon">emoji<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/1bb46e7/index.ts#L20">index.ts:20</a></li>
+							<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/484c01a/src/embedbuilder.ts#L22">embedbuilder.ts:22</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -154,6 +154,9 @@
 					<li class=" tsd-kind-class">
 						<a href="../classes/embedbuilder.html" class="tsd-kind-icon">Embed<wbr>Builder</a>
 					</li>
+					<li class=" tsd-kind-class">
+						<a href="../classes/pageupdater.html" class="tsd-kind-icon">Page<wbr>Updater</a>
+					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface tsd-is-private tsd-is-not-exported">
@@ -171,6 +174,9 @@
 				<ul class="after-current">
 					<li class=" tsd-kind-interface tsd-is-private tsd-is-not-exported">
 						<a href="emojis.html" class="tsd-kind-icon">Emojis</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="pageupdateoptions.html" class="tsd-kind-icon">Page<wbr>Update<wbr>Options</a>
 					</li>
 				</ul>
 			</nav>
