--- a/embedbuilder/interfaces/emojis.html
+++ b/embedbuilder/interfaces/emojis.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Emoji | discord-embedbuilder</title>
+	<title>Emojis | discord-embedbuilder</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,10 +54,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="emoji.html">Emoji</a>
+					<a href="emojis.html">Emojis</a>
 				</li>
 			</ul>
-			<h1>Interface Emoji</h1>
+			<h1>Interface Emojis</h1>
 		</div>
 	</div>
 </header>
@@ -72,7 +72,7 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">Emoji</span>
+						<span class="target">Emojis</span>
 					</li>
 				</ul>
 			</section>
@@ -83,8 +83,7 @@
 						<section class="tsd-index-section tsd-is-not-exported">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="emoji.html#do" class="tsd-kind-icon">do</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="emoji.html#emoji-1" class="tsd-kind-icon">emoji</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="emojis.html#emoji" class="tsd-kind-icon">emoji</a></li>
 							</ul>
 						</section>
 					</div>
@@ -93,12 +92,12 @@
 			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
-					<a name="do" class="tsd-anchor"></a>
-					<h3>do</h3>
-					<div class="tsd-signature tsd-kind-icon">do<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
+					<a name="emoji" class="tsd-anchor"></a>
+					<h3>emoji</h3>
+					<div class="tsd-signature tsd-kind-icon">emoji<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/6aa17d4/src/embedbuilder.ts#L22">embedbuilder.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/484c01a/src/embedbuilder.ts#L30">embedbuilder.ts:30</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -129,16 +128,6 @@
 						</ul>
 					</div>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
-					<a name="emoji-1" class="tsd-anchor"></a>
-					<h3>emoji</h3>
-					<div class="tsd-signature tsd-kind-icon">emoji<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/6aa17d4/src/embedbuilder.ts#L21">embedbuilder.ts:21</a></li>
-						</ul>
-					</aside>
-				</section>
 			</section>
 		</div>
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
@@ -157,24 +146,21 @@
 					<li class=" tsd-kind-class">
 						<a href="../classes/pageupdater.html" class="tsd-kind-icon">Page<wbr>Updater</a>
 					</li>
+					<li class=" tsd-kind-interface tsd-is-private tsd-is-not-exported">
+						<a href="emoji.html" class="tsd-kind-icon">Emoji</a>
+					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface tsd-is-private tsd-is-not-exported">
-						<a href="emoji.html" class="tsd-kind-icon">Emoji</a>
+						<a href="emojis.html" class="tsd-kind-icon">Emojis</a>
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
-								<a href="emoji.html#do" class="tsd-kind-icon">do</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
-								<a href="emoji.html#emoji-1" class="tsd-kind-icon">emoji</a>
+								<a href="emojis.html#emoji" class="tsd-kind-icon">emoji</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
-					<li class=" tsd-kind-interface tsd-is-private tsd-is-not-exported">
-						<a href="emojis.html" class="tsd-kind-icon">Emojis</a>
-					</li>
 					<li class=" tsd-kind-interface">
 						<a href="pageupdateoptions.html" class="tsd-kind-icon">Page<wbr>Update<wbr>Options</a>
 					</li>
