--- a/embedbuilder/master/index.html
+++ b/embedbuilder/master/index.html
@@ -75,9 +75,9 @@
 				</a>
 				<p>discord-embedbuilder v3.0.1 (current stable)</p>
 				<p><code>npm install discord-embedbuilder</code></p>
-				<p>discord-embedbuilder master repo (unstable)</p>
+				<p>discord-embedbuilder master repo (latest features &amp; fixes)</p>
 				<p><code>npm install muricans/discord-embedbuilder</code></p>
-				<p>discord-embedbuilder uses the latest stable version of discord.js (which as of 8/21/2020 is 12.3.1)</p>
+				<p>discord-embedbuilder uses the latest stable version of discord.js (12.3.1)</p>
 				<a href="#methods" id="methods" style="color: inherit; text-decoration: none;">
 					<h2>Methods</h2>
 				</a>
