Update discord-embedbuilder master

--- a/embedbuilder/master/classes/pageupdater.html
+++ b/embedbuilder/master/classes/pageupdater.html
@@ -149,7 +149,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/5da2b33/src/reaction/pageupdater.ts#L54">src/reaction/pageupdater.ts:54</a></li>
+									<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/ec33006/src/reaction/pageupdater.ts#L54">src/reaction/pageupdater.ts:54</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -207,13 +207,13 @@ pageUpdater.awaitPageUpdate()
 					<a name="cancel" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagStatic">Static</span> cancel</h3>
 					<ul class="tsd-signatures tsd-kind-event tsd-parent-kind-class tsd-is-static">
-						<li class="tsd-signature tsd-kind-icon">cancel<span class="tsd-signature-symbol">(</span>collector<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">MessageCollector</span>, content<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+						<li class="tsd-signature tsd-kind-icon">cancel<span class="tsd-signature-symbol">(</span>collector<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">MessageCollector</span>, content<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, message<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/5da2b33/src/reaction/pageupdater.ts#L147">src/reaction/pageupdater.ts:147</a></li>
+									<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/ec33006/src/reaction/pageupdater.ts#L145">src/reaction/pageupdater.ts:145</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -235,6 +235,12 @@ pageUpdater.awaitPageUpdate()
 										<p>The content that contained the cancel keyword.</p>
 									</div>
 								</li>
+								<li>
+									<h5>message: <span class="tsd-signature-type">string</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>The message that has been formatted to be sent to the user.</p>
+									</div>
+								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
 						</li>
@@ -244,13 +250,13 @@ pageUpdater.awaitPageUpdate()
 					<a name="invalid" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagStatic">Static</span> invalid</h3>
 					<ul class="tsd-signatures tsd-kind-event tsd-parent-kind-class tsd-is-static">
-						<li class="tsd-signature tsd-kind-icon">invalid<span class="tsd-signature-symbol">(</span>collector<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">MessageCollector</span>, content<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+						<li class="tsd-signature tsd-kind-icon">invalid<span class="tsd-signature-symbol">(</span>collector<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">MessageCollector</span>, content<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, message<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/5da2b33/src/reaction/pageupdater.ts#L140">src/reaction/pageupdater.ts:140</a></li>
+									<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/ec33006/src/reaction/pageupdater.ts#L137">src/reaction/pageupdater.ts:137</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -272,6 +278,12 @@ pageUpdater.awaitPageUpdate()
 										<p>The content that had an invalid response in it.</p>
 									</div>
 								</li>
+								<li>
+									<h5>message: <span class="tsd-signature-type">string</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>The message that has been formatted to be sent to the user.</p>
+									</div>
+								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
 						</li>
@@ -281,13 +293,13 @@ pageUpdater.awaitPageUpdate()
 					<a name="page" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagStatic">Static</span> page</h3>
 					<ul class="tsd-signatures tsd-kind-event tsd-parent-kind-class tsd-is-static">
-						<li class="tsd-signature tsd-kind-icon">page<span class="tsd-signature-symbol">(</span>page<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span>, content<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, collector<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">MessageCollector</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+						<li class="tsd-signature tsd-kind-icon">page<span class="tsd-signature-symbol">(</span>page<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span>, content<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, collector<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">MessageCollector</span>, message<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/5da2b33/src/reaction/pageupdater.ts#L133">src/reaction/pageupdater.ts:133</a></li>
+									<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/ec33006/src/reaction/pageupdater.ts#L129">src/reaction/pageupdater.ts:129</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -313,6 +325,12 @@ pageUpdater.awaitPageUpdate()
 									<h5>collector: <span class="tsd-signature-type">MessageCollector</span></h5>
 									<div class="tsd-comment tsd-typography">
 										<p>The message collector.</p>
+									</div>
+								</li>
+								<li>
+									<h5>message: <span class="tsd-signature-type">string</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>The message that has been formatted to be sent to the user.</p>
 									</div>
 								</li>
 							</ul>
@@ -393,7 +411,7 @@ pageUpdater.awaitPageUpdate()
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/5da2b33/src/reaction/pageupdater.ts#L90">src/reaction/pageupdater.ts:90</a></li>
+									<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/ec33006/src/reaction/pageupdater.ts#L90">src/reaction/pageupdater.ts:90</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
